--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href='/'>JDsore</a>
+      <a class="navbar-brand" href='/'>水浒英雄册</a>
     </div>
     <div class="collapse navbar-collapse" id="my_navbar">
       <ul class="nav navbar-nav navbar-right">
@@ -15,6 +15,9 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
+              <% if current_user.admin? %>
+                <li><%=link_to('管理员界面',admin_heros_path)%></li>
+              <% end %>
               <li><%=link_to(content_tag(:i,'退出',class:'fa fa-sign-out'),destroy_user_session_path,method: :delete)%></li>
             </ul>
           </li>
