--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -17,6 +17,7 @@
             <ul class="dropdown-menu">
               <% if current_user.admin? %>
                 <li><%=link_to('管理员界面',admin_heros_path)%></li>
+                <li><%=link_to('主要事件',events_path)%></li>
               <% end %>
               <li><%=link_to(content_tag(:i,'退出',class:'fa fa-sign-out'),destroy_user_session_path,method: :delete)%></li>
             </ul>
